@@ -771,7 +771,9 @@ void Client::mousePressEvent( QMouseEvent *ev ){
 }
 
 void Client::mouseReleaseEvent( QMouseEvent* /* ev */){
+    debug("mouseReleaseEvent");
   if (dragging_state == dragging_runs) {
+      debug("dragging runs");
       dragging_state = dragging_nope;
       releaseMouse();
       return;
